# actix-react-ws-chat

./: .gitignore  README.md
actix-react-client/: package-lock.json  package.json
actix-react-client/src/: App.js
actix-react-client/src/Components/: ChatRoomPage.js  ChatRoomPage.module.css  Home.js  NavBar.js  RoomList.js  RoomListElement.js
actix-server/: Cargo.toml  output.txt  package-lock.json
actix-server/src/: lobby.rs  main.rs  messages.rs  routes.rs  start_connection.rs  ws.rs
